<resources>
    <string name="app_name">Loan Shark</string>
    <string name="toolbar_borrowers">Borrowers</string>
    <string name="toolbar_creditors">Creditors</string>
    <string name="toolbar_history">Payment History</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_import_export">Import/Export</string>
    <string name="toolbar_contacts">Contacts</string>
    <string name="heading_total_money_owed">Total Money Owed: </string>
    <string name="heading_money_owed">Money Owed:</string>
    <string name="heading_item_borrowed">Item(s) Borrowed:</string>
    <string name="heading_payments">Payments:</string>
    <string name="heading_initial_date">Initial Date:</string>
    <string name="heading_due_date">Due Date:</string>
    <string name="heading_action">Action:</string>
    <string name="heading_known_phone_numbers">Known Phone Number(s):</string>
    <string name="heading_overall_balance">Overall Balance: </string>
    <string name="heading_import_db">Import Database</string>
    <string name="heading_import_db_warning">All records will be overwritten!</string>
    <string name="heading_delete_record">Delete record</string>
    <string name="heading_warning">Warning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_initial_amount">Initial Amt</string>
    <string name="text_interest">Interest</string>
    <string name="text_total_amount">Total Amt</string>
    <string name="text_paid_so_far">Paid so far</string>
    <string name="text_still_owe">Still owe</string>
    <string name="text_proceed">Proceed</string>
    <string name="header_dates">Dates:</string>
    <string name="text_initial_date">Initial date</string>
    <string name="text_due_date">Due date</string>
    <string name="button_return_all">Return All</string>
    <string name="button_pay_all">Payment</string>
    <string name="button_play_part">Pay Part</string>
    <string name="button_modify">Modify</string>
    <string name="button_backspace">Backspace</string>
    <string name="button_delete_record">Delete Record</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_finish">Finish</string>
    <string name="button_add_from_contacts">Pick...</string>
    <string name="message_delete_record_prompt">Are you sure you want to delete this record?\n\nAll history associated with this record will be deleted as well!\n\nIf that is not your intention, select \"Pay All\" or \"Pay Part\" in the record info.</string>
    <string name="message_unreliable_person">This person has a one star rating and may cause you problems.\n\nAre you sure you want to proceed?</string>
    <string name="text_known_phone_numbers">Known phone numbers (swipe to delete):</string>
    <string name="heading_pick_date">Pick due date:</string>
    <string name="heading_add_record">Add/Edit Record</string>
    <string name="message_select_person">Select a person from the list or add a new person:</string>
    <string name="text_add_new_person">Add New</string>
    <string name="text_add_new_number">Add New Number</string>
    <string name="message_debt_reason">Reason for borrowing:</string>
    <string name="message_is_monetary">Is this a monetary debt?</string>
    <string name="text_monetary">Monetary</string>
    <string name="text_nonmonetary">Non-monetary</string>
    <string name="message_init_amt">Amount borrowed:</string>
    <string name="message_has_interest">With simple interest?</string>
    <string name="message_interest_amount">Interest percentage (ex: 5.5, NOT 0.055):</string>
    <string name="message_interest_type">Interest type:</string>
    <string name="text_pick_due_date">Pick</string>
    <string name="text_indefinite">Indefinite</string>
    <string name="heading_add_person">Add New Person</string>
    <string name="add_person_fname">First name or nickname:</string>
    <string name="add_person_lname">Last name (optional):</string>
    <string name="add_person_rating">How reliable is this person?</string>
    <string name="button_close">Close</string>
    <string name="text_export_db">Export Database</string>
    <string name="heading_pin_protection">PIN protection</string>
    <string name="text_pin_description">Enable PIN protection when opening the app</string>
    <string name="text_pin_enable">Enable PIN:</string>
    <string name="text_pin">PIN:</string>
    <string name="toolbar_manual">Manual</string>
    <string name="text_interest_warning">If this setting is enabled, and you have a large number of records in the database, records may take longer to load.</string>
</resources>
