<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addPer_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDialogBackground"
    tools:context=".AddEditPersonFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addPer_ConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_gradient_background"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addPer_toolbarHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/heading_add_record"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            app:layout_constraintStart_toEndOf="@+id/addPer_BackImageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addPer_BackImageButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/baseline_keyboard_arrow_left_white_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/addPer_ScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/addPer_ButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPer_ConstraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/add_person_fname"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/addPer_fnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/add_person_lname"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/addPer_lnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/add_person_rating"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:numStars="5"
                android:rating="5"
                android:stepSize="1" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/text_known_phone_numbers"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <sanguine.studio.loanshark.NonScrollRecyclerView
                android:id="@+id/addPer_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/addPer_addNewPhoneNumberButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ripple_background_rectangle_blue"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/text_add_new_number" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/addPer_ButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addPer_addNewButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_background_rectangle_green"
            android:drawableTop="@drawable/ic_check_white_24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/button_finish" />

        <Button
            android:id="@+id/addPer_addFromContactsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_background_rectangle_orange"
            android:drawableTop="@drawable/ic_account_supervisor_white_24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/text_pick_due_date" />

        <Button
            android:id="@+id/addPer_cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_background_rectangle_red"
            android:drawableTop="@drawable/baseline_close_white_24"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/button_cancel" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>