<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addRecRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDialogBackground"
    tools:context=".AddEditRecordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainToolbarConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/toolbar_gradient_background"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbarHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/heading_add_record"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            app:layout_constraintStart_toEndOf="@+id/recordInfo_BackImageButton"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/recordInfo_BackImageButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:src="@drawable/baseline_keyboard_arrow_left_white_36"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbarConstraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/message_select_person"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/addRecSelectPersonSpinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorStatusBar"
                    android:gravity="center" />

                <Button
                    android:id="@+id/addRecAddNewPersonButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ripple_background_rectangle_blue"
                    android:text="@string/text_add_new_person" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/message_debt_reason"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/addRecReasonEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/message_is_monetary"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <RadioGroup
                android:id="@+id/addRecMonetaryRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/addRecMonetaryRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="true"
                    android:text="@string/text_monetary" />

                <RadioButton
                    android:id="@+id/addRecNonmonetaryRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/text_nonmonetary" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/addRecMonetaryLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/message_init_amt"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/addRecAmountBorrowedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Switch
                    android:id="@+id/addRecInterestSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:paddingTop="10dp"
                    android:text="@string/text_interest"
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:id="@+id/addRecInterestLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/message_interest_amount"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/addRecInterestAmtEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/message_interest_type"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <Spinner
                        android:id="@+id/addRecInterestTypeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorStatusBar"
                        android:gravity="center"
                        android:padding="10dp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/addRecNonmonetaryLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/heading_item_borrowed"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/addRecNonMonItem_0_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/addRecNonMonItem_1_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/addRecNonMonItem_2_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/heading_due_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/addRecDateTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingRight="10dp"
                        android:text="@string/text_indefinite"
                        android:textColor="@color/colorOrange"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/addRecDateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ripple_background_rectangle_blue"
                        android:text="@string/text_pick_due_date" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/addRecAddButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_background_rectangle_green"
            android:drawableTop="@drawable/ic_check_white_24dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/heading_add_record" />

        <Button
            android:id="@+id/addRecCancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ripple_background_rectangle_red"
            android:drawableTop="@drawable/baseline_close_white_24"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/button_cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>